# pgn2anki

./: .gitignore  Cargo.toml
ankitemplate/: back.html  css.css  front.html
src/: main.rs
