[package]
name = "pgn2anki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
genanki-rs = "0.4.0"
rand = "0.8.5"
sacrifice = "0.2.0"
shakmaty = "0.24.0"


